# notice_board

./: .env-sample  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  readme.md
config/: settings.py  urls.py
items/: admin.py  models.py  paginators.py  serializers.py  urls.py  views.py
items/migrations/: 0001_initial.py  0002_alter_advertisement_options.py  0003_alter_review_options.py
json_data/: advertisements.json  reviews.json  users.json
tests/: conftest.py  test_ads.py  test_items.py  test_reviews.py  test_services.py
tests/factories/: __init__.py
users/: models.py  permissions.py  serializers.py  services.py  urls.py  views.py
users/management/commands/: csu.py  fill.py
users/migrations/: 0001_initial.py  0002_rename_avatar_user_image_and_more.py  0003_user_token.py  0004_alter_user_token.py
