[tool.poetry]
name = "notice-board"
version = "0.1.0"
description = ""
authors = ["panthurr0 <olapopaola@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
drf-yasg = "^1.21.7"
django-cors-headers = "^4.4.0"
psycopg = "^3.2.1"
setuptools = "^72.1.0"
black = "^24.8.0"
pillow = "^10.4.0"
djangorestframework-simplejwt = "^5.3.1"
django-filter = "^24.3"
ipython = "^8.26.0"
psycopg2-binary = "^2.9.9"
pytest = "^8.3.2"
factories = "^1.2.0"
factory-boy = "^3.3.0"
pytest-django = "^4.8.0"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"